--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,4 @@
+#this file is used for directly uploading to an ebs instance without creating an s3 bucket
 name: Deploy to Elastic Beanstalk
 
 on:
